# mcp-dream-weaver

./: .gitignore  README.md  app.py  pyproject.toml  resources.py  tools.py
context/: gradio_llms.txt  mcp_llms_full.txt  mcp_python_sdk.txt
