[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-dream-weaver"
version = "0.1.0"
description = "MCP Dream Weaver project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio[mcp]>=5.33.1",
    "mcp[cli]>=1.9.3",
    "openai>=1.86.0",
    "python-dotenv>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_dream_weaver"]
